--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,8 @@
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>I LOVE JSON</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
   </head>
   <body>
     <noscript>
